--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2018"
 [dependencies]
 mdbook = "0.4"
 comrak = "0.11"
-#roffman = { git = "https://github.com/vv9k/roffman" }
-roffman = { path = "../roffman" }
+roffman = { git = "https://github.com/vv9k/roffman" }
+serde = { version = "1", features = ["derive"] }
