--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ readme = "README.md"
 version = "0.1.0"
 edition = "2018"
 
+[[bin]]
+path = "./src/main.rs"
+name = "mdbook-man"
+
 [dependencies]
 mdbook = "0.4"
 comrak = "0.11"
