fix: Only deploy the generated book from CI on push to master

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Deploy it
         uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./output
